run ucb-UrbanLoco Dataset

--- a/config/euroc/ucb.yaml
+++ b/config/euroc/ucb.yaml
@@ -2,7 +2,7 @@
 
 #common parameters
 imu_topic: "/imu_raw"
-image_topic: "/camera/imgage_color"
+image_topic: "/camera_array/cam0/image_raw/compressed"
 output_path: "/home/weining/summer_intern/vins-mono-catkin_ws/src/VINS-Mono/path_recorder"
 
 #camera calibration 
@@ -63,7 +63,7 @@ gyr_w: 8.66e-5      # gyroscope bias random work noise standard deviation.     #
 g_norm: 9.81007     # gravity magnitude
 
 #loop closure parameters
-loop_closure: 1                    # start loop closure
+loop_closure: 0                    # start loop closure
 load_previous_pose_graph: 0        # load and reuse previous pose graph; load from 'pose_graph_save_path'
 fast_relocalization: 0             # useful in real-time and large project
 pose_graph_save_path: "/home/shaozu/output/pose_graph/" # save and load path
